
//from(d:\svn\common\server\tool\umlpad\baseball\code\pt_usergateserver.xml)

//[[begin of d:\svn\common\server\tool\umlpad\baseball\proto_code_begin.txt

//option optimize_for = LITE_RUNTIME;

import "excel_baseball_table_db.proto";
import "gameLogic.proto";




//]]end of d:\svn\common\server\tool\umlpad\baseball\proto_code_begin.txt




// Packet type specification



//bb_3.5.1_ug_eusergps.usd
message s_x2ug_goto_match {
	optional string prev_level = 1;
	optional string next_level = 2;
}

//bb_3.5.1_ug_eusergps.usd
message s_x2ug_goto_main {
	optional string prev_level = 1;
	optional string next_level = 2;
}

//\bb_3.5.1_ug_eusergps.usd
message s_ug2x_goto_ok {
	optional string state = 1;
	optional string prev_level = 2;
	optional string next_level = 3;
}

//\bb_3.5.1_ug_eusergps.usd
message s_x2ug_goto_charactor_create {
	optional string prev_level = 1;
	optional string next_level = 2;
}

//\bb_3.5.1_ug_eusergps.usd
message s_x2ug_goto_inventory {
	optional string prev_level = 1;
	optional string next_level = 2;
}

//\bb_3.5.1_ug_eusergps.usd
message s_x2ug_goto_single {
	optional string prev_level = 1;
	optional string next_level = 2;
}

//\bb_3.5.1_ug_eusergps.usd
message s_x2ug_goto_friend_match {
	optional string prev_level = 1;
	optional string next_level = 2;
}

//\bb_3.5.1_ug_eusergps.usd
message s_x2ug_goto_upgrade_pitcher {
	optional string prev_level = 1;
	optional string next_level = 2;
}

//\bb_3.5.1_ug_eusergps.usd
message s_x2ug_goto_upgrade_tranner {
	optional string prev_level = 1;
	optional string next_level = 2;
}

//\bb_3.5.1_ug_eusergps.usd
message s_x2ug_goto_upgrade_maestro {
	optional string prev_level = 1;
	optional string next_level = 2;
}

//\bb_3.5.1_ug_eusergps.usd
message s_x2ug_goto_etc_ativate {
	optional string prev_level = 1;
	optional string next_level = 2;
}

//\bb_3.5.1_ug_eusergps.usd
message s_x2ug_goto_rank {
	optional string prev_level = 1;
	optional string next_level = 2;
}

//\bb_3.5.1_ug_eusergps.usd
message s_x2ug_goto_quest {
	optional string prev_level = 1;
	optional string next_level = 2;
}

//\bb_3.5.1_ug_eusergps.usd
message s_x2ug_goto_option {
	optional string prev_level = 1;
	optional string next_level = 2;
}

//\bb_3.5.1_ug_eusergps.usd
message s_x2ug_goto_shop {
	optional string prev_level = 1;
	optional string next_level = 2;
}

//\bb_3.5.1_ug_eusergps.usd
message s_x2ug_goto_team {
	optional string prev_level = 1;
	optional string next_level = 2;
}

//\bb_4.5.0_ug_single_play.usd
message s_x2ug_single_play_start {
	optional int64 uid = 1;
	optional int64 team = 2;
}

//bb_4.5.0_ug_single_play.usd
//서버에서는 플레이 시간등으로 어뷰징체크
message s_ug2x_single_play_start {
	optional int32 single_play_id = 1;
}

//\bb_4.5.0_ug_single_play.usd
message s_x2ug_single_play_end {
	optional int32 single_play_id = 1;
	optional int32 user_score = 2;
	optional int32 ai_score = 3;
}

//bb_4.5.0_ug_single_play.usd
message s_ug2x_single_play_end {
	optional s_result_game rg = 1;
	repeated s_tbl_item bonus_item = 2;
	optional s_tbl_user user = 3;
	optional s_tbl_playerbetter better = 4;
	optional s_tbl_playerpitcher pitcher = 5;
}

//bb_4.6.5_ug_quest.usd
//mode = play , upgrade
message s_x2ug_quest_start {
	optional int32 quest_sid = 1;
	optional string mode = 2;
}

//\bb_4.6.5_ug_quest.usd
message s_ug2x_quest_start {
	optional int64 quest_id = 1;
}

//bb_4.6.5_ug_quest.usd
message s_x2ug_quest_end {
	optional int64 quest_id = 1;
	optional int32 quest_sid = 2;
}

//bb_4.6.5_ug_quest.usd
message s_ug2x_quest_end {
	optional s_tbl_user user = 1;
	optional s_tbl_team team = 2;
	optional s_tbl_playerbetter better = 3;
	optional s_tbl_playerpitcher pitcher = 4;
	optional s_tbl_quest quest = 5;
	repeated s_tbl_title title = 6;
	repeated s_tbl_item bonus_items = 7;
}

//\bb_5.0.5_ug_item.usd
message s_ans_add_item {
	optional s_tbl_item item = 1;
	optional int32 reason = 2;
}

//bb_5.0.5_ug_item.usd
//Sys_아이템의 sid로 강제로 아이템을 획득&#x0A;
message s_req_admin_add_item {
	optional int32 sid = 1;
	optional int32 category = 2;
	optional string etc_info = 3;
}

//bb_5.0.5_ug_item.usd
//상점 sid로 해당 물건 구입요청.
message s_req_item_buy {
	optional int32 shop_sid = 1;
	optional int32 count = 2;
	optional string option = 3;
}

//\bb_5.0.5_ug_item.usd
message s_req_admin_item_clear {
	optional int64 uid = 1;
}

//\bb_5.0.5_ug_item.usd
message s_ans_admin_item_clear {
	optional bool ok = 1;
}

//\bb_5.0.5_ug_item.usd
message s_req_show_me_the_money {
	optional int64 uid = 1;
	optional int32 game_money = 2;
}

//\bb_5.0.5_ug_item.usd
message s_ans_show_me_the_money {
	optional int32 game_money = 1;
}

//bb_5.0.6_ug_item_inven.usd
//아이템 귀속&#x0A;
message s_req_set_item_owner {
	optional int64 uid = 1;
	optional int64 iid = 2;
	optional int64 pid = 3;
	optional bool is_better = 4;
}

//\bb_5.0.6_ug_item_inven.usd
message s_ans_set_item_owner {
	optional int64 iid = 1;
	optional int64 pid = 2;
	optional bool is_better = 3;
}

//bb_5.0.6_ug_item_inven.usd
//장착 해제
//장착아이템의 경우에만. eIC_EQUIP
message s_req_item_attach_detach {
	optional int64 uid = 1;
	optional int64 iid = 2;
	optional bool is_attach = 3;
	optional int64 pid = 4;
	optional bool is_better = 5;
}

//\bb_5.0.6_ug_item_inven.usd
message s_ans_item_attach_detach {
	optional int64 iid = 1;
	optional bool is_attach = 2;
	optional int64 pid = 3;
	optional bool is_better = 4;
}

//\bb_5.0.6_ug_item_inven.usd
message s_req_item_use {
	optional int64 uid = 1;
	optional int64 iid = 2;
	optional int64 pid = 3;
	optional bool is_better = 4;
}

//\bb_5.0.6_ug_item_inven.usd
message s_ans_item_use {
	optional int64 iid = 1;
	optional int64 pid = 2;
	optional bool is_better = 3;
	optional int32 use_count = 4;
}

//\bb_5.1.5_ug_player.usd
message s_req_player_create_better {
	optional s_tbl_playerbetter player = 1;
}

//\bb_5.1.5_ug_player.usd
message s_ans_player_create_better {
	optional s_tbl_playerbetter player = 1;
}

//\bb_5.1.5_ug_player.usd
message s_req_player_delete {
	optional bool is_pitcher = 1;
	optional int64 db_id = 2;
}

//\bb_5.1.5_ug_player.usd
message s_ans_player_delete {
	optional bool is_pitcher = 1;
	optional int64 db_id = 2;
}

//\bb_5.1.5_ug_player.usd
message s_req_echo_to_ug {
	optional int32 type = 1;
	optional string msg = 2;
}

//\bb_5.1.5_ug_player.usd
message s_ans_echo_from_ug {
	optional s_req_echo_to_ug info = 1;
}

//bb_5.1.5_ug_player.usd
message s_req_player_create_pitcher {
	optional s_tbl_playerpitcher player = 1;
	optional s_tbl_pitcherskill skill1 = 2;
	optional s_tbl_pitcherskill skill2 = 3;
}

//\bb_5.1.5_ug_player.usd
message s_ans_player_create_pitcher {
	optional s_req_player_create_pitcher info = 1;
}

//\bb_5.1.5_ug_player.usd
message s_ans_ug_error {
	optional int32 sys_error_id = 1;
}

//\bb_5.1.5_ug_player.usd
message s_req_add_tbl_pitcherskill {
	optional s_tbl_pitcherskill info = 1;
}

//\bb_5.1.5_ug_player.usd
message s_ans_add_tbl_pitcherskill {
	optional s_tbl_pitcherskill info = 1;
}

//\bb_5.3.5_ug_team.usd
message s_req_team_create {
	optional s_tbl_team team = 1;
}

//\bb_5.3.5_ug_team.usd
message s_ans_team_create {
	optional s_tbl_team team = 1;
}

//\bb_5.3.5_ug_team.usd
message s_req_team_delete {
	optional int32 team_order = 1;
}

//\bb_5.3.5_ug_team.usd
message s_ans_team_delete {
	optional int32 team_order = 1;
}

//\bb_5.3.5_ug_team.usd
message s_req_team_select {
	optional int32 team_order = 1;
}

//\bb_5.3.5_ug_team.usd
message s_ans_team_select {
	optional int32 team_order = 1;
}

//\bb_5.3.5_ug_team.usd
message s_req_team_update {
	optional s_tbl_team team = 1;
}

//\bb_5.3.5_ug_team.usd
message s_ans_team_update {
	optional s_tbl_team team = 1;
}


message UserGateServer_Client {
	enum Type {
		NONE = 1;

		ug2x_goto_ok = 2;
		ug2x_single_play_start = 3;
		ug2x_single_play_end = 4;
		ug2x_quest_start = 5;
		ug2x_quest_end = 6;
		ans_add_item = 7;
		ans_admin_item_clear = 8;
		ans_show_me_the_money = 9;
		ans_set_item_owner = 10;
		ans_item_attach_detach = 11;
		ans_item_use = 12;
		ans_player_create_better = 13;
		ans_player_delete = 14;
		ans_echo_from_ug = 15;
		ans_player_create_pitcher = 16;
		ans_ug_error = 17;
		ans_add_tbl_pitcherskill = 18;
		ans_team_create = 19;
		ans_team_delete = 20;
		ans_team_select = 21;
		ans_team_update = 22;
	}

	required Type type = 1;

	optional s_ug2x_goto_ok m_ug2x_goto_ok = 2;
	optional s_ug2x_single_play_start m_ug2x_single_play_start = 3;
	optional s_ug2x_single_play_end m_ug2x_single_play_end = 4;
	optional s_ug2x_quest_start m_ug2x_quest_start = 5;
	optional s_ug2x_quest_end m_ug2x_quest_end = 6;
	optional s_ans_add_item m_ans_add_item = 7;
	optional s_ans_admin_item_clear m_ans_admin_item_clear = 8;
	optional s_ans_show_me_the_money m_ans_show_me_the_money = 9;
	optional s_ans_set_item_owner m_ans_set_item_owner = 10;
	optional s_ans_item_attach_detach m_ans_item_attach_detach = 11;
	optional s_ans_item_use m_ans_item_use = 12;
	optional s_ans_player_create_better m_ans_player_create_better = 13;
	optional s_ans_player_delete m_ans_player_delete = 14;
	optional s_ans_echo_from_ug m_ans_echo_from_ug = 15;
	optional s_ans_player_create_pitcher m_ans_player_create_pitcher = 16;
	optional s_ans_ug_error m_ans_ug_error = 17;
	optional s_ans_add_tbl_pitcherskill m_ans_add_tbl_pitcherskill = 18;
	optional s_ans_team_create m_ans_team_create = 19;
	optional s_ans_team_delete m_ans_team_delete = 20;
	optional s_ans_team_select m_ans_team_select = 21;
	optional s_ans_team_update m_ans_team_update = 22;
}
//end of message UserGateServer_Client


message Client_UserGateServer {
	enum Type {
		NONE = 1;

		x2ug_goto_match = 2;
		x2ug_goto_main = 3;
		x2ug_goto_charactor_create = 4;
		x2ug_goto_inventory = 5;
		x2ug_goto_single = 6;
		x2ug_goto_friend_match = 7;
		x2ug_goto_upgrade_pitcher = 8;
		x2ug_goto_upgrade_tranner = 9;
		x2ug_goto_upgrade_maestro = 10;
		x2ug_goto_etc_ativate = 11;
		x2ug_goto_rank = 12;
		x2ug_goto_quest = 13;
		x2ug_goto_option = 14;
		x2ug_goto_shop = 15;
		x2ug_goto_team = 16;
		x2ug_single_play_start = 17;
		x2ug_single_play_end = 18;
		x2ug_quest_start = 19;
		x2ug_quest_end = 20;
		req_admin_add_item = 21;
		req_item_buy = 22;
		req_admin_item_clear = 23;
		req_show_me_the_money = 24;
		req_set_item_owner = 25;
		req_item_attach_detach = 26;
		req_item_use = 27;
		req_player_create_better = 28;
		req_player_delete = 29;
		req_echo_to_ug = 30;
		req_player_create_pitcher = 31;
		req_add_tbl_pitcherskill = 32;
		req_team_create = 33;
		req_team_delete = 34;
		req_team_select = 35;
		req_team_update = 36;
	}

	required Type type = 1;

	optional s_x2ug_goto_match m_x2ug_goto_match = 2;
	optional s_x2ug_goto_main m_x2ug_goto_main = 3;
	optional s_x2ug_goto_charactor_create m_x2ug_goto_charactor_create = 4;
	optional s_x2ug_goto_inventory m_x2ug_goto_inventory = 5;
	optional s_x2ug_goto_single m_x2ug_goto_single = 6;
	optional s_x2ug_goto_friend_match m_x2ug_goto_friend_match = 7;
	optional s_x2ug_goto_upgrade_pitcher m_x2ug_goto_upgrade_pitcher = 8;
	optional s_x2ug_goto_upgrade_tranner m_x2ug_goto_upgrade_tranner = 9;
	optional s_x2ug_goto_upgrade_maestro m_x2ug_goto_upgrade_maestro = 10;
	optional s_x2ug_goto_etc_ativate m_x2ug_goto_etc_ativate = 11;
	optional s_x2ug_goto_rank m_x2ug_goto_rank = 12;
	optional s_x2ug_goto_quest m_x2ug_goto_quest = 13;
	optional s_x2ug_goto_option m_x2ug_goto_option = 14;
	optional s_x2ug_goto_shop m_x2ug_goto_shop = 15;
	optional s_x2ug_goto_team m_x2ug_goto_team = 16;
	optional s_x2ug_single_play_start m_x2ug_single_play_start = 17;
	optional s_x2ug_single_play_end m_x2ug_single_play_end = 18;
	optional s_x2ug_quest_start m_x2ug_quest_start = 19;
	optional s_x2ug_quest_end m_x2ug_quest_end = 20;
	optional s_req_admin_add_item m_req_admin_add_item = 21;
	optional s_req_item_buy m_req_item_buy = 22;
	optional s_req_admin_item_clear m_req_admin_item_clear = 23;
	optional s_req_show_me_the_money m_req_show_me_the_money = 24;
	optional s_req_set_item_owner m_req_set_item_owner = 25;
	optional s_req_item_attach_detach m_req_item_attach_detach = 26;
	optional s_req_item_use m_req_item_use = 27;
	optional s_req_player_create_better m_req_player_create_better = 28;
	optional s_req_player_delete m_req_player_delete = 29;
	optional s_req_echo_to_ug m_req_echo_to_ug = 30;
	optional s_req_player_create_pitcher m_req_player_create_pitcher = 31;
	optional s_req_add_tbl_pitcherskill m_req_add_tbl_pitcherskill = 32;
	optional s_req_team_create m_req_team_create = 33;
	optional s_req_team_delete m_req_team_delete = 34;
	optional s_req_team_select m_req_team_select = 35;
	optional s_req_team_update m_req_team_update = 36;
}
//end of message Client_UserGateServer

